# physis

./: .gitignore  Cargo.toml
src/: cli.rs  main.rs  mcp.rs  models.rs  scanner.rs
src/ai/: agent.rs  provider.rs  session.rs
