[package]
name = "physis"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
regex = "1"
once_cell = "1"

clap = { version = "4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
notify = { version = "7", optional = true }
rmcp = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
dotenvy = "0.15"
urlencoding = "2.1"
sled = "0.34"
async-trait = "0.1"
thiserror = "2"
log = "0.4"
futures = "0.3"
env_logger = "0.11"

[features]
default = ["cli", "voice", "web"]
cli = ["dep:clap"]
mcp = ["dep:rmcp", "dep:tokio"]
network = ["dep:notify", "dep:tokio"]
voice = ["dep:tokio", "dep:reqwest"]
web = ["dep:axum", "dep:tower-http", "dep:tokio"]
full = ["cli", "mcp", "network", "voice", "web"]

[[bin]]
name = "physis-voice"
required-features = ["voice", "web"]
path = "src/bin/voice.rs"
